# tidylake

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE.txt  README.md  Taskfile.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug.yaml  bug.yml  config.yaml  feature-request.yaml  feature-request.yml  question.yaml  question.yml
.github/workflows/: pages.yml
docs/: cli.md  context.md  design-principles.md  index.md  installation.md  manifests.md  scripts.md  sdk.md
docs-site/: 404.html  index.html  index.md  llms-full.txt  llms.txt  objects.inv  sitemap.xml
docs-site/api/compute-engine-plugin/: index.html
docs-site/api/data-product/: index.html
docs-site/api/tidylake/: index.html
docs-site/cli/: index.html  index.md
docs-site/context/: index.html  index.md
docs-site/design-principles/: index.html  index.md
docs-site/extra/: tweaks.css
docs-site/installation/: index.html
docs-site/manifests/: index.html  index.md
docs-site/scripts/: index.html  index.md
docs-site/sdk/: index.html
docs-site/search/: search_index.json
docs/.partials/: index-header.html
docs/api/: compute-engine-plugin.md  data-product.md  tidy-lake-context.md  tidylake.md
docs/demos/: demos.md  pandas-local.md  pandas-pyiceberg.md  pyspark.md
docs/plugins/: compute-engine.md  overview.md
site/: 404.html  llms-full.txt  llms.txt  sitemap.xml
site/cli/: index.html
site/design-principles/: index.html  index.md
src/tidylake/: __init__.py
tests/: AGENTS.md  conftest.py
tests/acceptance/: conftest.py  test_cli_acceptance.py  test_init_acceptance.py
tests/integration/: fake_compute_engine.py  test_cli.py  test_cli_run.py  test_demo_execution.py  test_etl_bootstrap.py  test_etl_path_resolution.py  test_init_command.py
tests/unit/: test_code_parser_utils.py  test_commons.py  test_compute_engine.py  test_compute_engine_extended.py  test_data_product.py  test_data_product_script_resolution.py  test_etl.py  test_main.py  test_scaffold.py  test_textual_viewer.py  test_textual_viewer_extended.py
(+52 files in other folders)
