[project]
name = "tidylake"
version = "0.1.0"
description = "Unopinionated data and metadata management"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Jacinto Arias", email = "jacinto.arias@taidy.io" },
    { name = "Adrian Sanchez", email = "adrian.sanchez@taidy.io" },
    { name = "Javier Cozar", email = "javier.cozar@taidy.io" },
    { name = "Daniel González", email = "daniel.gonzalez@taidy.io" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Runtime dependencies (project dependencies)
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/demosense/tidylake"
Repository = "https://github.com/demosense/tidylake"
Documentation = "https://<org>.github.io/tidylake/"
Issues = "https://github.com/demosense/tidylake/issues"

[project.scripts] # (project-specific CLI commands)
tidylake = "tidylake.cli:app"


[build-system]
# Buid backend configuration
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]

# Development dependencies 
dev = [
    # project specific dependencies
    "duckdb>=1.3.2",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pyiceberg[sql-sqlite]>=0.10.0",
    "pydantic<2.12",
    "pyspark-client>=4.0.0",
    "textual>=0.60.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
    "mkdocs-llmstxt>=0.5.0",
]

# Testing dependencies
test = [
    "coverage-badge",
    "ruff>=0.12.4",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

# ruff
[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I"]
ignore = ["SIM108"]
